--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,14 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+app_hello:
+    path: /
+    controller: App\Controller\AccueilController::index
+
+
+app_contact:
+    path: /contact
+    controller: App\Controller\ContactController::index
+
+
+app_service:
+    path: /service
+    controller: App\Controller\ServiceController::index
+
